fixed scrollbar styling

--- a/src/App.css
+++ b/src/App.css
@@ -31,12 +31,10 @@ html {
 
 body{
   font-weight: 400;
-  /* overflow: hidden; */
   position: relative;
   background-color: #0a192f !important;
   color: #fff !important;
   font-family: 'Centra', sans-serif !important;
-  max-width: 1200px;
   margin: 0 auto;
 }
 
@@ -76,6 +74,20 @@ h1, h2, h3, h4, h5, h6{
 
 .App-link {
   color: #61dafb;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(253, 251, 251, 0.3);
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
 }
 
 @keyframes App-logo-spin {
