--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -6,4 +6,5 @@
     padding-left: 7%;
     padding-right: 7%;
     min-height: 100vh;
+    overflow: hidden;
 }
